<resources>
    <string name="config_mm_package_name">com.aspire.mm</string>
    <string name="badPin2">The old PIN2 you typed is not correct.</string>
    <string name="badPuk2">The PUK2 you typed is not correct.</string>
    <string name="checkPwdLen">Check your password is 4 to 8 digits.</string>
    <string name="pinNotEnabled">Please enable PIN before change it.</string>
    <string name="puk1Blocked">PIN is blocked.</string>
    <string name="puk2Blocked">PIN2 is blocked.</string>
    <string name="fdnFailMmi">Fail on FDN Check.</string>
    <string name="callBarringFailMmi">Fail on Call Barring.</string>
    <string name="Pin2Mmi">PIN2 change</string>
    <string name="PukMmi">Unblock PIN</string>
    <string name="Puk2Mmi">Unblock PIN2</string>
    <string name="serviceProvisioned">Service provisioned.</string>
    <string name="serviceUnknown">Connection problem or invalid MMI code.</string>
    <string name="cfServiceNotForwarded">Not forwarded</string>
    <string name="wday_year_month_day" formatted="false">%s, %s %s %s</string>
    <string name="wday_year_day_month" formatted="false">%s, %s %s %s</string>
    <string name="wday_month_day_year" formatted="false">%s, %s %s, %s</string>
    <string name="wday_month_year_day" formatted="false">%s, %s %s %s</string>
    <string name="wday_day_month_year" formatted="false">%s, %s %s %s</string>
    <string name="wday_day_year_month" formatted="false">%s, %s %s %s</string>
    <string name="invalidPuk">Input 8 digits.</string>
    <string name="year_month_day_wday" formatted="false">%s %s %s, %s</string>
    <string name="year_day_month_wday" formatted="false">%s %s %s, %s</string>
    <string name="month_day_year_wday" formatted="false">%s %s, %s, %s</string>
    <string name="month_year_day_wday" formatted="false">%s %s %s, %s</string>
    <string name="day_month_year_wday" formatted="false">%s %s %s, %s</string>
    <string name="invalid_imei">Invalid IMEI</string>
    <string name="same_imei">Same IMEI</string>
    <string name="oper_long_46000">CMCC</string>
    <string name="oper_long_46001">CU</string>
    <string name="oper_long_46601">Far EasTone</string>
    <string name="oper_long_46692">Chunghwa Telecom</string>
    <string name="oper_long_46697">Taiwan Mobile</string>
    <string name="oper_long_99998">Android1</string>
    <string name="oper_long_99999">Android</string>
    <string name="oper_short_46000">CMCC</string>
    <string name="oper_short_46001">CU-GSM</string>
    <string name="oper_short_46601">FET</string>
    <string name="oper_short_46692">Chunghwa</string>
    <string name="oper_short_46697">TWN</string>
    <string name="oper_short_99997">AD1</string>
    <string name="oper_short_99999">AD</string>
    <string name="day_year_month_wday" formatted="false">%s %s %s, %s</string>
    <string name="permdesc_receiveCbSms">Allows application to receive and process CB SMS messages. Malicious applications may monitor your messages or delete them without showing them to you.</string>
    <string name="permdesc_receiveDmRegisterSms">Allows application to receive and process DM Register SMS messages. Any Application except DM APP should not use this</string>
    <string name="VideoView_error_text_invalid_connection">Invalid connection. (403 Forbidden)</string>
    <string name="new_sim">New SIM</string>
    <string name="delete">Delete</string>
    <string name="searching_simcard">Detecting...</string>
    <string name="lockscreen_pin_too_many_failed_attempts_dialog_message" formatted="false">You have incorrectly input your PIN %d times. \n\nPlease try again in %d seconds.</string>
    <string name="lockscreen_password_too_many_failed_attempts_dialog_message" formatted="false">You have incorrectly input your password %d times. \n\nPlease try again in %d seconds.</string>
    <string name="wap_browser_pakcage">com.myriad.android.kunbrowser</string>
    <string name="wap_browser_component">com.myriad.android.kunbrowser.BrowserActivity</string>
    <string name="wap_browser_keyword">s.139.com</string>
    <string name="wap_browser_url_flag">search_url</string>
    <string name="sim_close">SIM card close</string>
    <string name="aerr_application_lowstorage">Internal storage is running out, the application has been stopped. Please free up some space and try again.</string>
    <string name="aerr_process_lowstorage">Internal storage is running out, the process has been stopped. Please free up some space and try again.</string>
    <string name="low_internal_storage_view_title">Internal storage running out</string>
    <string name="low_storage_warning_message">Please free up some space, or some applications and system functions may not work well.</string>
    <string name="deleteMails">Delete Mails</string>
    <string name="drm_protection_status">Protection status:</string>
    <string name="drm_can_forward">Can be forwarded.</string>
    <string name="drm_can_not_forward">Cannot be forwarded.</string>
    <string name="drm_no_limitation">No limitation.</string>
    <string name="drm_no_license">No available DRM license.</string>
    <string name="drm_begin">Begin:</string>
    <string name="serviceClassVideo">Video</string>
    <string name="drm_end">End:</string>
    <string name="drm_use_left">Count left:</string>
    <string name="free_memory_btn">Free Space</string>
    <string name="drm_protectioninfo_renew">Renew</string>
    <string name="drm_licenseacquisition_title">DRM License Acquisition</string>
    <string name="drm_licenseacquisition_message">%1$s has no available DRM license. You can press Renew button to acquire DRM license.</string>
    <string name="drm_toast_license_expired">DRM License has expired.</string>
    <string name="drm_forwardforbidden_title">Forward Forbidden</string>
    <string name="drm_forwardforbidden_message">Some protected files cannot be forwarded.</string>
    <string name="drm_license_install_success">DRM License installation succeeded.</string>
    <string name="media_controller_buffering">Buffering %d%%...</string>
    <string name="contact_widget_loading">Loading…</string>
    <string name="drm_license_install_fail">DRM License installation failed.</string>
    <string name="drm_secure_timer_title">Invalid DRM secure clock</string>
    <string name="media_controller_live">Live</string>
    <string name="media_controller_playing">Playing</string>
    <string name="media_controller_connecting">Connecting...</string>
    <string name="drm_secure_timer_message">You could not use DRM protected files. Please make sure data connection is available.</string>
    <string name="VideoView_error_text_bad_file">Bad file, this video cannot be played.</string>
    <string name="VideoView_error_text_cannot_connect_to_server">Cannot connect to server.</string>
    <string name="VideoView_error_text_type_not_supported">Media file type not supported.</string>
    <string name="VideoView_error_text_drm_not_supported">DRM protected, this video cannot be played.</string>
    <string name="drm_consume_title">Consume DRM rights</string>
    <string name="drm_consume_message">Your action will consume DRM rights.</string>
    <string name="drm_first_time_use">This is the first time use.</string>
    <string name="drm_use_now">Use it now?</string>
    <string name="drm_consume_interval">This file will be available within %1$s after you start using it.</string>
    <string name="drm_effective_duration">Effective duration:</string>
    <string name="drm_expire_dialog_future">Valid period:</string>
    <string name="drm_protectioninfo_title">Protection Info</string>
    <string name="oper_long_46003">China Telecom</string>
    <string name="oper_short_46003">China Telecom</string>
    <string name="validity_period">Validity:</string>
    <string name="invalid_card">Invalid Card</string>
    <string name="RejectCauseTitle">Network Rejection Cause</string>
    <string name="MMRejectCause2">SIM not provisioned MM #2</string>
    <string name="MMRejectCause3">SIM not allowed MM #3</string>
    <string name="virtual_sim_on_slot1">Virtual SIM 1 ON</string>
    <string name="virtual_sim_on_slot2">Virtual SIM 2 ON</string>
    <string name="virtual_sim_on_slot3">Virtual SIM 3 ON</string>
    <string name="virtual_sim_on_slot4">Virtual SIM 4 ON</string>
    <string name="virtual_sim_on">Virtual SIM ON</string>
    <string name="sim_missing_slot1">Slot 1: No SIM card detected</string>
    <string name="MMRejectCause5">Call Failed MM #5</string>
    <string name="MMRejectCause6">Phone not allowed MM #6</string>
    <string name="sim_missing_slot2">Slot 2: No SIM card detected</string>
    <string name="wifi_display_bt_hdmi_off_wfd_on">HDMI will be turned off when you turn on wireless display. Do you want to continue?</string>
    <string name="wifi_display_wfd_off_hdmi_on">Wireless display will be turned off when you turn on HDMI. Do you want to continue?</string>
    <string name="MMRejectCause13">SOS/Emergency calls only</string>
    <string name="wifi_display_wifi_p2p_disconnect_wfd_connect">Current Wi-Fi Direct connection will be disconnected when you connect to the wireless display device. Do you want to continue?</string>
    <string name="sdcard_ready_title">SD card ready</string>
    <string name="sdcard_select_default_path">Do you want to change the default write disk?</string>
    <string name="sdcard_default_path_change">Default write disk was changed.</string>
    <string name="sim_missing_slot3">Slot 3: No SIM card detected</string>
    <string name="sim_missing_slot4">Slot 4: No SIM card detected</string>
    <string name="sim_missing">No SIM card detected</string>
    <string name="sim_missing_detail">Please check if SIM card is ready</string>
    <string name="sim_missing_slot1_card">Slot 1: No card detected</string>
    <string name="sim_missing_slot2_card">Slot 2: No card detected</string>
    <string name="wifi_display_unstable_connection">Unstable connection</string>
    <string name="wifi_display_connection_is_not_steady">The current connection of wireless display is not steady.</string>
    <string name="wifi_display_unstable_suggestion">The current connection of wireless display is not steady, please try to get closer to your display device.</string>
    <string name="usb_storage_ready_title">External USB storage ready</string>
    <string name="wifi_display_reconnect">Reconnect</string>
    <string name="wifi_display_disconnect_then_reconnect">Wireless display disconnect. Do you want to reconnect?</string>
    <string name="wifi_display_disconnected">Wireless display disconnected.</string>
    <string name="wifi_wps_failed_overlap">Another WPS session was detected. Please try again in a few minutes.</string>
    <string name="wifi_display_wfd_and_wifi_are_turned_on">Wireless display and Wi-Fi are turned on.</string>
    <string name="wifi_display_sound_path_reminder">Multimedia sound won\'t play from your headset.</string>
    <string name="sim_missing_card">No card detected</string>
    <string name="sim_missing_detail_card">Please check if card is ready</string>
    <string name="confirm_flight_mode_title">Airplane mode on</string>
    <string name="confirm_flight_mode_msg">To use the number, first turn off Airplane mode.</string>
    <string name="confirm_radio_title">SIM off</string>
    <string name="confirm_radio_msg">To use the number, first turn it on.</string>
    <string name="wifi_display_change_resolution_reminder">Change resolution will reconnect wireless display automatically.</string>
    <string name="wifi_display_do_not_remind_again">Do not remind again.</string>
    <string name="wifi_display_wifi_ap_affects_quality">Current Wi-Fi AP may affect the quality of Wireless display.</string>
    <string name="data_conn_only">Data connection only</string>
    <string name="logo">application logo icon</string>
    <string name="close">close application</string>
    <string name="maximum">maximum application</string>
</resources>