<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_gravity="top"
        android:id="@+id/action_bar_container"
        android:background="@drawable/float_window_actionbar_pause"
        android:layout_width="match_parent"
        android:layout_height="@dimen/floatwindow_action_bar_height">
        <ImageView
            android:id="@+id/activityLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:scaleType="center"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/logo"/>
        <ImageView
            android:gravity="center"
            android:id="@+id/activityClose"
            android:background="@drawable/float_window_icon_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/float_window_exit"
            android:scaleType="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/close"/>
        <ImageView
            android:gravity="center"
            android:id="@+id/activityMaximum"
            android:background="@drawable/float_window_icon_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/float_window_maximum"
            android:scaleType="center"
            android:layout_toLeftOf="@+id/activityClose"
            android:layout_centerVertical="true"
            android:contentDescription="@string/maximum"/>
        <ImageView
            android:gravity="center"
            android:id="@+id/activityStick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/float_window_stick"
            android:scaleType="center"
            android:layout_toLeftOf="@+id/activityMaximum"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/windowContentOverlay"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:foregroundGravity="top|fill_horizontal"/>
        <FrameLayout
            android:id="@+id/dialog_layout"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/windowContentOverlay"
            android:foregroundGravity="top|fill_horizontal">
            <FrameLayout
                android:layout_gravity="center"
                android:id="@+id/dialog_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/windowContentOverlay"
                android:foregroundGravity="top|fill_horizontal"/>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>
